07-hello-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-openshift
  name: hello-openshift
spec:
  host: "hello-rahti-24022020.rahtiapp.fi"
  port:
    targetPort: 8080-8080
  to:
    name: hello-openshift-svc
